k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: godzilla-ingress
  namespace: godzilla
  annotations:
    networking.gke.io/managed-certificates: godzilla-cert
    kubernetes.io/ingress.global-static-ip-name: godzilla-ip
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: godzilla.adri.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-svc
                port:
                  number: 80
